--- a/AstroDeconvolution/AstroDeconvolution.csproj
+++ b/AstroDeconvolution/AstroDeconvolution.csproj
@@ -97,7 +97,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="PSF.cs" />
-    <Compile Include="PsfWrapper.cs" />
     <Compile Include="RichardsonLucyDeconvolution.cs" />
     <Compile Include="RunningAverage.cs" />
     <Compile Include="RunningCovariance.cs" />
@@ -108,6 +107,7 @@
     </Compile>
     <Compile Include="ShiftingArray.cs" />
     <Compile Include="KLCoefficients.cs" />
+    <Compile Include="SpatiallyVariantPsf.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
