Setup the use of pages

--- a/SimpleDeconvolution/SimpleDeconvolution.csproj
+++ b/SimpleDeconvolution/SimpleDeconvolution.csproj
@@ -84,9 +84,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Page1.xaml">
+    <Page Include="PageDeconvolve.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageSelect.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Window1.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -102,8 +106,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
+    <Compile Include="PageDeconvolve.xaml.cs">
+      <DependentUpon>PageDeconvolve.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageSelect.xaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>PageSelect.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
