--- a/trunk/AstroDeconvolution/AstroDeconvolution.csproj
+++ b/trunk/AstroDeconvolution/AstroDeconvolution.csproj
@@ -51,9 +51,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FftwConvolver, Version=1.0.3731.30171, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="FftwConvolver, Version=1.0.3732.21706, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\FftwConvolver\Debug\FftwConvolver.dll</HintPath>
+      <HintPath>..\FftwConvolver\Debug\FftwConvolver.dll</HintPath>
     </Reference>
     <Reference Include="MathNet.Iridium, Version=2008.8.16.470, Culture=neutral, PublicKeyToken=c061a3ec32cc0c6f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
